# tlsh-rs

./: .gitattributes  AGENTS.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
src/: builder.rs  digest.rs  error.rs  lib.rs  profile.rs
src/cli/: application.rs  args.rs  io.rs  mod.rs  model.rs  presentation.rs
src/internal/: constants.rs  mod.rs  quartile.rs
tests/: bin_cli.rs  cli.rs  compat.rs
